--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
+h1{
+	color: red;
+    font-size: 20px;
+    font-size: 50px;
+    font-style: normal; 
+}
 
+body{
+	background-color:#0099ff;
+	background-position: center;
+	font-family: 'Courier', sans-serif;
+	text-align: center;
+	font-size: 22px;
+	padding: 0px;
+	width: 800px;
+	margin: 0 auto;
+}
