--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+nav {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+	background-color: #cc0000;
+	font-size: 1.75em;
+	
+}
+
 h1{
 	color: red;
     font-size: 20px;
