--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,23 @@
 nav {
 	background-color: #00ffcc;
-	background-position: relative;
 }
 
 nav ul {
-  list-style-type: square;
+  list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
 
 nav ul li {
-  float: center;
+  float: left;
   width: auto;
 }
 
 nav ul li a {
   display: block;
   text-transform: uppercase;
-  padding: 8px; 
+  padding: 20px; 
   font-size: 16px ;
   color:#000000;
   font-family: 'Courier', sans-serif;
@@ -29,23 +28,23 @@ nav ul li a {
 	text-align: center;
 	background-color: #cc0000;
 	font-size: 1em;
-	background-position: relative;
     top: 0;
 	
 }
 
-h1{
+/*INDEX*/
+
+#Project2{
 	color: red;
-    font-size: 10px;
-    font-size: 20px;
+    font-size: 25px;
     font-style: normal; 
 }
 
 body{
 	background-color:#0099ff;
-	background-position: center;
+	background-position: left;
 	font-family: 'Courier', sans-serif;
-	text-align: center;
+	text-align: left;
 	font-size: 22px;
 	padding: 0px;
 	width: 800px;
