--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,8 @@ nav {
 	text-align: center;
 }
 nav ul {
-  width: 50%
-  margin-left: auto;
-  margin-right: auto;;
+  width: 50%;
+  display: inline-block;
   overflow: hidden;
 }
 nav ul li {
