--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ nav ul {
 }
 nav ul li a {
   display: inline-block;
+  text-align: center;
   text-transform: uppercase;
   padding: 20px; 
   font-size: 16px ;/
