--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ nav ul {
   display: inline-block;
   overflow: hidden;
 }
-nav ul li a {
+nav ul li {
   display: inline-block;
   text-align: center;
   text-transform: uppercase;
