--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ div .css {
 }
 .resumebody {
 	max-width: 960px;
-	text-align: left;
+	text-align: center;
 	background-color: #e699ff;
 	font-size: 1em;
     top: 0;
