--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav ul li {
     font-size: 35px;
     font-style: normal;
 }
-.mainbody{
+/*.mainbody{
 	background-color:#0099df;
 	background-position: center;
 	font-family: 'Courier', sans-serif;
@@ -45,7 +45,7 @@ nav ul li {
 	font-size: 22px;
 	padding: 0px;
 	width: 800px;
-	margin: 0 auto;
+	margin: 0 auto;*/
 }
 nav .project{
   font-size: 100%;
@@ -79,7 +79,7 @@ div .css {
 .resumebody {
 	max-width: 960px;
 	text-align: center;
-	background-color: #e699ff;
+	background-color: #00ff99;
 	font-size: 1em;
     top: 0;
 }
