--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ div .css {
     font-style: normal; 
 }
 
-.contact{
+.contact, .Education, .Computerskills, .Profeccient, .Work, .References{
 	background-color:black;
 	font-size: 2.5em;
 	text-align: left;
