--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,8 @@ div .css {
 
 .contact, .Education, .Computerskills, .Profeccient, .Work, .References{
 	color:black;
-	font-size: 2.5em;
+	font-size: 1.5em;
 	text-align: center;
-	margin: -5px;
+	margin: auto;
 	padding: 0;
 }
