--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ nav ul {
   display: inline-block;
   overflow: hidden;
 }
-nav ul li {
+nav ul li a{
   display: inline-block;
   text-align: center;
   text-transform: uppercase;
@@ -18,13 +18,6 @@ nav ul li {
   font-family: 'Courier', sans-serif;
 }
 /*INDEX*/
-.resumebody {
-	max-width: 960px;
-	text-align: center;
-	background-color: #FF99FF;
-	font-size: 1em;
-    top: 0;
-}
 .Project, .Goals, .Aboutme{
 	color: red;
     font-size: 25px;
@@ -69,13 +62,13 @@ div .css {
 	max-width: 100%
 	position:center;
 }
-/*Resume*/
-/*.resumemain{
-	margin: 0 auto; 
-    padding: 0; 
-    width: 1024px; 
-    text-align: left;
-}*/
+.resumebody {
+	max-width: 960px;
+	text-align: center;
+	background-color: #FF99FF;
+	font-size: 1em;
+    top: 0;
+}
 .resumebody {
 	max-width: 1024px;
 	text-align: center;
@@ -83,12 +76,11 @@ div .css {
 	font-size: 1em;
     top: 0;
 }
-.Education, .Computerskills, .Profeccient, .Work, .References{
+/*.Education, .Computerskills, .Profeccient, .Work, .References{
 	color: red;
 	font-size: 20px;
 	font-style: normal;
-
-}
+}*/
 .contact{
 	background-color: #ff3333;
 	font-size: 2.5em;
