--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ nav ul {
   display: inline-block;
   overflow: hidden;
 }
-nav ul li a{
+nav ul li {
   display: inline-block;
   text-align: center;
   text-transform: uppercase;
@@ -18,6 +18,15 @@ nav ul li a{
   font-family: 'Courier', sans-serif;
 }
 /*INDEX*/
+/* this is needed to center the navigation bar*/
+.resumebody {
+ -	max-width: 960px;
+ -	text-align: center;
+ -	background-color: #FF99FF;
+ -	font-size: 1em;
+ -    top: 0;
+ -}
+
 .Project, .Goals, .Aboutme{
 	color: red;
     font-size: 25px;
@@ -59,8 +68,8 @@ div .mainpage ul li {
 
 }
 div .css {
-	max-width: 100%
-	position:center;
+	display:block;
+    margin: 0 auto;
 }
 .resumebody {
 	max-width: 960px;
@@ -68,7 +77,7 @@ div .css {
 	background-color: #FF99FF;
 	font-size: 1em;
     top: 0;
-}
+}*/
 .resumebody {
 	max-width: 1024px;
 	text-align: center;
@@ -80,6 +89,7 @@ div .css {
 	color: red;
 	font-size: 20px;
 	font-style: normal;
+
 }*/
 .contact{
 	background-color: #ff3333;
