--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*NAVIGATION BAR*/
+/******NAVIGATION BAR********/
 nav {
 	background-color: #00ffcc;
 	text-align: center;
@@ -17,7 +17,7 @@ nav ul li {
   color:#000000;
   font-family: 'Courier', sans-serif;
 }
-/*INDEX*/
+/********INDEX********/
 /* this is needed to center the navigation bar*/
 .resumebody {
  -	max-width: 960px;
@@ -31,13 +31,21 @@ nav ul li {
 	color: red;
     font-size: 25px;
     font-style: normal; 
-    text-align: left;
+    text-align: center;
 }
 .Project2{
 	text-align: center;
 	color: red;
     font-size: 35px;
     font-style: normal;
+}
+div .Goals
+div .Goals ul li {
+	font-size: 1.5em;
+	text-align: center;
+	margin: auto;
+	padding: 0;
+}
 }
 /*.mainbody{
 	background-color:#0099df;
@@ -65,11 +73,25 @@ div .mainpage ul li {
 	font-size: 140%
 	text-align: center;
 	margin: auto;
-
 }
 div .css {
 	display:block;
+	align-content: center;
     margin: 0 auto;
+    position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -50px 0px 0px -50px;
+}
+
+.css {
+	margin-left:auto;
+	margin-right:auto;
+	float :none;
+	vertical-align: middle;
+
+}
+/*******RESUME*****/
 }
 .resumebody {
 	max-width: 960px;
@@ -77,7 +99,7 @@ div .css {
 	background-color: #FF99FF;
 	font-size: 1em;
     top: 0;
-}*/
+}
 .resumebody {
 	max-width: 1024px;
 	text-align: center;
@@ -85,24 +107,24 @@ div .css {
 	font-size: 1em;
     top: 0;
 }
-/*.Education, .Computerskills, .Profeccient, .Work, .References{
+.Education, .Computerskills, .Profeccient, .Work, .References{
 	color: red;
 	font-size: 20px;
 	font-style: normal;
 
-}*/
+}
 .contact{
 	background-color: #ff3333;
 	font-size: 2.5em;
-	text-align: left;
+	text-align: center;
 	margin: -15px;
 	padding: 0;
 }
-
-.h1{
+div .contact .h1{
 	color: red;
     font-size: 25px;
     font-style: normal; 
+    text-align: center;
 }
 
 .Education, .Computerskills, .Profeccient, .Work, .References{
@@ -112,3 +134,6 @@ div .css {
 	margin: auto;
 	padding: 0;
 }
+
+
+/******Countries visisted****/
