--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ div .mainpage ul li {
 }
 /*******RESUME*****/
 .resumebody {
-	max-width: 1024px;
+	min-width: 960px;
 	text-align: center;
 	background-color: #00ffcc;
 	font-size: 1em;
