updated after running validations

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ div .mainpage ul li {
     top: 0;
 }
 
-.Education, .Computerskills, {
+.Education, .Computerskills{
 	color:black;
 	margin: auto;
 	font-family: 'Bree Serif', serif;
